--- a/FameTreacker/FameTreacker/Resources/Strings.pl.resx
+++ b/FameTreacker/FameTreacker/Resources/Strings.pl.resx
@@ -22,6 +22,6 @@
         <value>Start</value>
     </data>
     <data name="Events" xml:space="preserve">
-        <value>Wydażenia</value>
+        <value>Wydarzenia</value>
     </data>
 </root>
