--- a/FameTreacker/FameTreacker/Resources/Strings.pl.resx
+++ b/FameTreacker/FameTreacker/Resources/Strings.pl.resx
@@ -24,4 +24,13 @@
     <data name="Events" xml:space="preserve">
         <value>Wydarzenia</value>
     </data>
+    <data name="Photos" xml:space="preserve">
+        <value>Zdjęcia</value>
+    </data>
+    <data name="Tweets" xml:space="preserve">
+        <value>Tweety</value>
+    </data>
+    <data name="Videos" xml:space="preserve">
+        <value>Filmy</value>
+    </data>
 </root>
