--- a/FameTreacker/FameTreacker/Resources/Strings.resx
+++ b/FameTreacker/FameTreacker/Resources/Strings.resx
@@ -24,4 +24,13 @@
     <data name="Events" xml:space="preserve">
         <value>Events</value>
     </data>
+    <data name="Photos" xml:space="preserve">
+        <value>Photos</value>
+    </data>
+    <data name="Tweets" xml:space="preserve">
+        <value>Tweets</value>
+    </data>
+    <data name="Videos" xml:space="preserve">
+        <value>Videos</value>
+    </data>
 </root>
