--- a/FameTracker/FameTracker/Resources/Strings.resx
+++ b/FameTracker/FameTracker/Resources/Strings.resx
@@ -38,4 +38,7 @@
     <data name="Videos" xml:space="preserve">
         <value>Videos</value>
     </data>
+    <data name="NoTweets" xml:space="preserve">
+        <value>No connection to twitter services</value>
+    </data>
 </root>
